# mr_radar

./: .gitignore  README.md  app.py  config.ini  generate_html.py  index_template.html  level3_to_png.py  make_map.py  mr_radar.py  pyproject.toml  radar_template.html  template.html
static/css/: styles.css
static/js/: index.js
templates/: index.html
